# ChapNat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.ac
.github/workflows/: cmake-multi-platform.yml
common/: CMakeLists.txt  Makefile  chevent.c  chevent.h  chmessage.h  chsession.c  chsession.h  main.c
connection/: CMakeLists.txt  Makefile  Makefile.am  chdef.h  chobj.c  chobj.h  command.c  command.h  common.c  common.h  main.c  message.c  message.h  net.c  net.h  resolve.c  resolve.h  sockets.c  sockets.h  users.c  users.h
connection-server/src/: Chapat  Makefile  chdef.h  chobj.c  chobj.h  command.c  command.h  common.c  common.h  error_functions.c  error_functions.h  group_id.h  main.c  message.c  message.h  net.c  net.h  server_net.h  sockets.c  users.c  users.h
db/: CMakeLists.txt  Makefile  asprintf.c  asprintf.h  chapat.db.sql  command.c  common.c  common.h  events.c  events.h  main.c  message.c  message.h  net.c  users.c  users.h
db-connected-server/: pom.xml
db-connected-server/src/main/java/net/: Server.java
db/sql/: Makefile  build.sql  init-users.sql  init.sql  reset.sql
db/sql/data/: users.txt
doc/: Presolver.txt  TODOlist.md  cobject.txt  protocol-connection.txt  protocol-db.txt  protocol-resolver.txt  protocol-transfer.txt  protocol.txt
resolver/: CMakeLists.txt  Makefile  capture.bash  chbuff.c  chbuff.h  chptr.c  chptr.h  common.c  dht.c  dht.h  hinf.h  main.c
resolver/pcaps/: 2015-04-07_02:04:12.pcap  2015-04-07_02:04:57.pcap  2015-04-07_10:04:21.pcap  2015-04-09_20:04:30.pcap
src/: ChatHub-C  ChatHub-C.sh  Makefile  command.c  command.h  common.c  common.h  constants.h  error_functions.h  group_id.c  group_id.h  main.c  message.c  message.h  server.c  server_net.c  sockets.c  users.h
